force-app/main/default/objects/Linea_de_factura__c/Linea_de_factura__c.object-meta.xml
<CustomObject>
    <label>Línea de factura</label>
    <nameField>
        <label>Línea de factura Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Líneas de factura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>