force-app/main/default/objects/Linea_de_factura__c/fields/DescripcionLinea__c.field-meta.xml
<CustomField>
    <fullName>DescripcionLinea__c</fullName>
    <label>DescripcionLinea</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>