force-app/main/default/objects/Linea_de_factura__c/fields/Numero_de_linea__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_linea__c</fullName>
    <label>Número de línea</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>