force-app/main/default/objects/Linea_de_factura__c/validationRules/Limite_de_caracteres.validationRule-meta.xml
<ValidationRule>
    <fullName>Limite_de_caracteres</fullName>
    <active>true</active>
    <description>Limita a 150 el número de caracteres de la descripción</description>
    <errorConditionFormula>LEN(DescripcionLinea__c) &gt; 150</errorConditionFormula>
    <errorDisplayField>DescripcionLinea__c</errorDisplayField>
    <errorMessage>La descripción no puede superar los 150 caracteres.</errorMessage>
</ValidationRule>